[project]
name = "zapi"
version = "0.1.0"
description = "API collections for study"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "dataclasses-json>=0.6.7",
    "fastapi[standard]>=0.116.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
[[tool.uv.pip]]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
